--- a/metro_simulator_full_physics/config/experiments.yaml
+++ b/metro_simulator_full_physics/config/experiments.yaml
@@ -1,72 +1,142 @@
 # ============================================================
-# Metro Security Simulator - 实验组配置
+# 地铁安检仿真系统 - 实验配置文件
 # ============================================================
 #
-# 严格对应论文 Table 3 & Table 4
+# 基于论文 Table 3 & Table 4
 #
 # Table 3 - 客流情景：
-#   Situation | PA1到达率 | PA2到达率
-#   1         | 1 ped/s   | 5 ped/s
-#   2         | 2 ped/s   | 4 ped/s
-#   3         | 3 ped/s   | 3 ped/s
-#   4         | 4 ped/s   | 2 ped/s
-#   5         | 5 ped/s   | 1 ped/s
+#   情景 | PA1到达率 | PA2到达率
+#   1    | 1 ped/s   | 5 ped/s
+#   2    | 2 ped/s   | 4 ped/s
+#   3    | 3 ped/s   | 3 ped/s
+#   4    | 4 ped/s   | 2 ped/s
+#   5    | 5 ped/s   | 1 ped/s
 #
-# Table 4 - 实验组（连续客流，Duration Type 1）：
-#   Group 1-5 对应 Situation 1-5，持续时间60秒
-#
-# 论文 Table 5 - 预期结果：
-#   Group | Access/Egress | PA1平均 | PA2平均
-#   1     | 83.0s         | 25.5s   | 12.5s
-#   2     | 138.4s        | 53.0s   | 11.8s
-#   3     | 197.8s        | 82.9s   | 11.7s
-#   4     | 259.2s        | 113.5s  | 11.7s
-#   5     | 320.6s        | 144.3s  | 11.7s
+# Group 1-5:  连续到达模式 (Duration Type 1)
+# Group 6-10: 间隔到达模式 (Duration Type 2)
 # ============================================================
+
+# ==================== 到达模式配置 ====================
+arrival_patterns:
+  # 模式1: 连续均匀到达
+  continuous:
+    type: "uniform"
+    description: "连续均匀到达"
+    duration: 60.0          # 总到达时长（秒）
+    
+  # 模式2: 间隔到达（可自定义时段）
+  # 使用 segments 列表定义多个到达时段
+  # 每个时段格式: [开始时间, 结束时间]
+  # 时段之间的间隙自动成为"无人到达"期
+  #
+  # 论文原始设定: [[0, 25], [36, 70]]
+  # 即 0-25s 到达, 25-36s 间隔, 36-70s 到达
+  #
+  # 示例变体:
+  #   均匀两段: [[0, 30], [40, 70]]
+  #   三段到达: [[0, 20], [30, 50], [60, 80]]
+  #   短间隔:   [[0, 25], [30, 65]]
+  #
+  discontinuous:
+    type: "segments"
+    description: "间隔到达（多时段）"
+    segments:               # 到达时段列表 [开始, 结束]
+      - [0, 25]             # 第一段: 0-25秒
+      - [36, 70]            # 第二段: 36-70秒
+    # 总有效到达时长 = 25 + 34 = 59秒（接近连续模式的60秒）
+    
+  # 可以添加更多自定义模式，例如：
+  # triple_segment:
+  #   type: "segments"
+  #   description: "三段间隔到达"
+  #   segments:
+  #     - [0, 20]
+  #     - [30, 50]
+  #     - [60, 80]
+
+# ==================== 实验组配置 ====================
+# Group 1-5: 连续到达
+# Group 6-10: 间隔到达（与Group 1-5相同的PA1/PA2比例）
 
 experiment_groups:
 
-  - name: Group1_Situation1
-    description: "Situation 1: PA1=1, PA2=5 ped/s"
+  # ==================== 连续到达 (Group 1-5) ====================
+  - name: Group1
+    description: "连续到达: PA1=1, PA2=5 ped/s"
     q_PA1: 1.0
     q_PA2: 5.0
-    arrival_duration: 60.0
+    arrival_pattern: "continuous"
     max_time: 600.0
-    # 预期：Access/Egress≈83s, PA1≈25.5s, PA2≈12.5s
 
-  - name: Group2_Situation2
-    description: "Situation 2: PA1=2, PA2=4 ped/s"
+  - name: Group2
+    description: "连续到达: PA1=2, PA2=4 ped/s"
     q_PA1: 2.0
     q_PA2: 4.0
-    arrival_duration: 60.0
+    arrival_pattern: "continuous"
     max_time: 600.0
-    # 预期：Access/Egress≈138.4s, PA1≈53s, PA2≈11.8s
 
-  - name: Group3_Situation3
-    description: "Situation 3: PA1=3, PA2=3 ped/s"
+  - name: Group3
+    description: "连续到达: PA1=3, PA2=3 ped/s"
     q_PA1: 3.0
     q_PA2: 3.0
-    arrival_duration: 60.0
+    arrival_pattern: "continuous"
     max_time: 600.0
-    # 预期：Access/Egress≈197.8s, PA1≈82.9s, PA2≈11.7s
 
-  - name: Group4_Situation4
-    description: "Situation 4: PA1=4, PA2=2 ped/s"
+  - name: Group4
+    description: "连续到达: PA1=4, PA2=2 ped/s"
     q_PA1: 4.0
     q_PA2: 2.0
-    arrival_duration: 60.0
+    arrival_pattern: "continuous"
     max_time: 800.0
-    # 预期：Access/Egress≈259.2s, PA1≈113.5s, PA2≈11.7s
 
-  - name: Group5_Situation5
-    description: "Situation 5: PA1=5, PA2=1 ped/s"
+  - name: Group5
+    description: "连续到达: PA1=5, PA2=1 ped/s"
     q_PA1: 5.0
     q_PA2: 1.0
-    arrival_duration: 60.0
+    arrival_pattern: "continuous"
     max_time: 1000.0
-    # 预期：Access/Egress≈320.6s, PA1≈144.3s, PA2≈11.7s
 
+  # ==================== 间隔到达 (Group 6-10) ====================
+  # 使用 discontinuous 模式，时段由 arrival_patterns.discontinuous.segments 定义
+  - name: Group6
+    description: "间隔到达: PA1=1, PA2=5 ped/s"
+    q_PA1: 1.0
+    q_PA2: 5.0
+    arrival_pattern: "discontinuous"
+    max_time: 600.0
+
+  - name: Group7
+    description: "间隔到达: PA1=2, PA2=4 ped/s"
+    q_PA1: 2.0
+    q_PA2: 4.0
+    arrival_pattern: "discontinuous"
+    max_time: 600.0
+
+  - name: Group8
+    description: "间隔到达: PA1=3, PA2=3 ped/s"
+    q_PA1: 3.0
+    q_PA2: 3.0
+    arrival_pattern: "discontinuous"
+    max_time: 800.0
+
+  - name: Group9
+    description: "间隔到达: PA1=4, PA2=2 ped/s"
+    q_PA1: 4.0
+    q_PA2: 2.0
+    arrival_pattern: "discontinuous"
+    max_time: 800.0
+
+  - name: Group10
+    description: "间隔到达: PA1=5, PA2=1 ped/s"
+    q_PA1: 5.0
+    q_PA2: 1.0
+    arrival_pattern: "discontinuous"
+    max_time: 1000.0
+
+# ==================== 输出设置 ====================
 output_settings:
   output_dir: "outputs"
   generate_figures: true
   save_raw_data: true
+  figure_format: "png"
+  figure_dpi: 150
